tests/baselines/reference/classWithPredefinedTypesAsNames.errors.txt
==== tests/cases/conformance/classes/classDeclarations/classWithPredefinedTypesAsNames.ts (4 errors) ====
    // classes cannot use predefined types as names
    
    class any { }
          ~~~
!!! error TS2414: Class name cannot be 'any'
    class number { }
          ~~~~~~
!!! error TS2414: Class name cannot be 'number'
    class boolean { }
          ~~~~~~~
!!! error TS2414: Class name cannot be 'boolean'
    class string { }
          ~~~~~~
!!! error TS2414: Class name cannot be 'string'